# forge_ui

./: .gitignore  AGENTS.md  BESTEHENDE_KOMPONENTEN.md  CLAUDE.md  Cargo.toml  MASTER_TASK_LIST.md  NEUE_KOMPONENTEN.md  REGISTRY.md  idea.md  todo.md
src/: assets.rs  badge.rs  button.rs  camera.rs  card.rs  checkbox.rs  dialog.rs  label.rs  layout.rs  lib.rs  plugin.rs  prelude.rs  tabs.rs  theme.rs
src/assets/: fonts.rs  icon_assets.rs  icon_loader.rs  icons.rs  mod.rs
src/assets/icons/: accessibility.rs  builder.rs  mod.rs  resouce.rs  resource.rs
src/components/: TEMPLATE.md  badge.rs  card.rs  checkbox.rs  dialog.rs  helper.rs  label.rs  mod.rs  switch.rs  tabs.rs
src/components/accessible_icon/: builder.rs  components.rs
src/components/accessible_icon_theme/: mod.rs
src/components/accordion/: builder.rs  components.rs  events.rs  mod.rs  plugin.rs  systems.rs
src/components/alert_dialog/: builder.rs  components.rs  events.rs  mod.rs  plugin.rs
src/components/aspect_ratio/: builder.rs  components.rs
src/components/avatar/: builder.rs  components.rs  enums.rs  mod.rs  plugin.rs  style.rs
src/components/badge/: builder.rs  components.rs  enums.rs  mod.rs  style.rs  utils.rs
src/components/base_button/: builder.rs  components.rs
src/components/base_card/: builder.rs  components.rs
src/components/base_checkbox/: builder.rs  components.rs
src/components/base_dialog/: builder.rs  components.rs
src/components/base_menu/: builder.rs  components.rs
src/components/base_radio/: builder.rs  components.rs
src/components/base_tab_list/: builder.rs  components.rs
src/components/blockquote/: builder.rs  components.rs  mod.rs  style.rs
src/components/button/: builder.rs  components.rs  enums.rs  events.rs  mod.rs  plugin.rs  style.rs  systems.rs
src/components/callout/: builder.rs  components.rs  mod.rs  style.rs
src/components/card/: builder.rs  components.rs  mod.rs  style.rs
src/components/checkbox/: builder.rs  components.rs  events.rs  mod.rs  plugin.rs  (+2 more)
src/showcase/: components.rs  events.rs  helpers.rs  mod.rs  plugin.rs  sidebar_layout.rs  systems.rs
src/theme/: data.rs  mod.rs  plugin.rs  runtime.rs  systems.rs
(+587 files in other folders)
