
# crates/forge_ui/cargo.toml

[package]
name = "forge_ui"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# Core Dependencies
bevy = { workspace = true, features = [] }
serde = { workspace = true }
ron = { workspace = true }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
log = { workspace = true }
bevy_common_assets = { workspace = true }

[features]
default = []
# UI-spezifische Features
fancy_ui = []
minimal_ui = []
# Integration mit Debug-Tools
debug_inspector = ["bevy/bevy_dev_tools"]
