[package]
name = "forge_ui"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
bevy.workspace = true
serde.workspace = true
ron.workspace = true
uuid.workspace = true
log.workspace = true
bevy_common_assets.workspace = true
bevy_common_assets.features = ["ron"]
bevy_asset_loader.workspace = true
bevy_tweening.workspace = true
thiserror.workspace = true

[features]
default = []
fancy_ui = []
minimal_ui = []
debug_inspector = ["bevy/bevy_dev_tools"]
