[package]
name = "forge_ui"
version = "0.1.0"
edition = "2021"
authors = ["Tim-Jonas Wechler"]
description = "Eine Game Engine zur Erstellung interaktiver Geschichten"
license = "MIT OR Apache-2.0"
repository = ""

[lib]
path = "src/lib.rs"

[dependencies]
bevy = { version = "0.16.0", features = [
    "dynamic_linking",
    "file_watcher",
    "multi_threaded",
] }
bevy_common_assets = { version = "0.13.0", features = ["ron"] }
bevy_asset_loader = { version = "0.23.0-rc.3", features = [
    "standard_dynamic_assets",
] }

serde = { version = "1.0.219", features = ["derive"] }
ron = "0.10.1"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
log = "0.4.27"
thiserror = "2.0.12"
resvg = "0.45.1"
usvg = "0.45.1"
tiny-skia = "0.11.4"
regex = "1"

[features]
default = []
showcase = []
debug_inspector = ["bevy/bevy_dev_tools"]
